chore: java 17 syntax update