@@ -9,7 +9,6 @@ import java.util.Set;
 import java.util.SortedMap;
 import java.util.SortedSet;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 import com.google.common.base.Preconditions;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.pharmgkb.pharmcat.definition.model.DefinitionExemption;
@@ -94,7 +93,7 @@ public class DefinitionReader {
     if (Files.isDirectory(path)) {
       List<Path> files = Files.list(path)
           .filter(f -> f.toString().endsWith("_translation.json"))
-          .collect(Collectors.toList());
+          .toList();
       for (Path file : files) {
         readFile(file);
       }
